deployment/policy/allow-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allowwp
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nodejs-mongo
      tier: mongo
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: nodejs-mongo
          tier: frontend
