deployment/policy/deny-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: protectmysql
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nodejs-mongo
      tier: mongo
  ingress: []
